--- a/posProject.ipynb
+++ b/posProject.ipynb
@@ -73,12 +73,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2: 3, 5: 6}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test report function\n",
+    "dSales = {2:[3], 5:[4,2]}\n",
+    "dCustSales = {}\n",
+    "\n",
+    "'''\n",
+    "2, 3\n",
+    "5, 6\n",
+    "'''\n",
+    "\n",
+    "def report():\n",
+    "    totCust = 0\n",
+    "    for key, value in dSales.items():\n",
+    "        purchase = value\n",
+    "        totCust = sum(purchase)\n",
+    "        dCustSales.update({key:totCust})\n",
+    "    return dCustSales\n",
+    "\n",
+    "report()"
+   ]
   },
   {
    "cell_type": "code",
